# glinlp

./: Makefile  README.md  output.txt  pyproject.toml  tmp-input.jsonl  tmp-schema.yaml
examples/: schema.example.yaml
notebooks/: demo.py
src/glinlp/: __init__.py  cli.py  nlp.py  schema.py  server.py
tests/: test_schema.py  test_workflows.py
