[project]
name = "glinlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent D. Warmerdam", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "gliner2>=1.0.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
glinlp = "glinlp.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.18.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
